package com.company;

public class Main
{
    static Game game;

    public static void main(String[] args)
    {
        game = new Game();
        System.out.println(game.players);
    }
}
